--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "dabutvin",
   "license": "MIT",
   "devDependencies": {
+    "bootstrap": "^4.1.3",
     "eslint": "^5.5.0",
     "grunt": "^1.0.3",
     "grunt-contrib-copy": "^1.0.0",
@@ -17,6 +18,7 @@
     "grunt-contrib-less": "^2.0.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-devserver": "^0.6.0",
-    "grunt-markdown": "^0.7.0"
+    "grunt-markdown": "^0.7.0",
+    "jquery": "^3.3.1"
   }
 }
